--- a/templates/compose.html
+++ b/templates/compose.html
@@ -6,7 +6,11 @@
   <form action="{{ request.path }}" method="post" class="compose">
     <div style="margin-bottom:5px"><input name="article_title" type="text" class="article_title" value="{{ article.article_title if article else "" }}"/></div>
     <div style="margin-bottom:5px">
-    <textarea name="article_html" rows="30" cols="40" class="article_html">{{ article.article_html if article else "" }}</textarea>
+    <textarea name="article_subj" rows="3" cols="80" class="article_subj">{{ article.article_subj if article else "" }}</textarea>
+    </div>
+    
+    <div style="margin-bottom:5px">
+    <textarea name="article_html" rows="30" cols="80" class="article_html">{{ article.article_html if article else "" }}</textarea>
             <script>
             CKEDITOR.replace( 'article_html' );
         </script>
