--- a/templates/modules/revision.html
+++ b/templates/modules/revision.html
@@ -2,7 +2,7 @@
 <!-- modules/revision.html -->
 <div class="article">
   <h1>{{ revision.article_title }}</h1>
-  <div class="subj">{% raw revision.article_subj %}</div>
+  <div class="annotation">{% raw revision.article_annotation %}</div>
   <div class="body">{% raw revision.article_html %}</div>
     <div class="admin">
   {% if current_user %}
