--- a/templates/modules/article.html
+++ b/templates/modules/article.html
@@ -2,7 +2,7 @@
 <!-- modules/article.html -->
 <div class="article">
   <h1><a href="article/{{ article.article_id }}">{{ article.article_title }}</a></h1>
-  <div class="body">{% raw article.article_subj %}</div>
+  <div class="body">{% raw article.article_annotation %}</div>
   <div class="body">{% raw article.article_html %}</div>
   <div class="body"> 
 
