--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ escape(handler.settings["blog_title"]) }}</title>
-    <link rel="stylesheet" href="{{ static_url("blog.css") }}" type="text/css">
+    <link rel="stylesheet" href="{{ static_url("wiki.css") }}" type="text/css">
     <link rel="alternate" href="/feed" type="application/atom+xml" title="{{ escape(handler.settings["blog_title"]) }}">
     {% block head %}{% end %}
   </head>
@@ -13,6 +13,7 @@
         <div style="float:right">
           {% if current_user %}
           	||{{ current_user.user_name }}||
+            <a href="/alter/">{{ _("list Artikles") }}</a> -
             <a href="/compose">{{ _("New post") }}</a> -
             <a href="/auth/logout?next={{ url_escape(request.uri) }}">{{ _("Sign out") }}</a>
           {% else %}
