ввел админовскую панель, разделили роутеры

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,3 +1,4 @@
+<!-- admin/base.html -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +14,7 @@
         <div style="float:right">
           {% if current_user %}
           	||{{ current_user.user_name }}||
-            <a href="/alter/">{{ _("list Artikles") }}</a> -
+            <a href="/admin/">{{ _("list Artikles") }}</a> -
             <a href="/compose">{{ _("New post") }}</a> -
             <a href="/auth/logout?next={{ url_escape(request.uri) }}">{{ _("Sign out") }}</a>
           {% else %}
@@ -29,3 +30,5 @@
     {% block bottom %}{% end %}
   </body>
 </html>
+<!-- / admin/base.html -->
+
