--- a/templates/admin/modules/article.html
+++ b/templates/admin/modules/article.html
@@ -10,10 +10,8 @@
   
 </div>    
     <div class="admin">
-  {% if current_user %}
-    [<a href="/compose?aid={{ article.article_id }}&rid={{ article.revision_id }}">{{ _("Edit this wiki") }}</a>]
-  {% end %}
-    [<a href="/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
+    [<a href="/admin/compose?aid={{ article.article_id }}&rid={{ article.revision_id }}">{{ _("Edit this wiki") }}</a>]
+    [<a href="/admin/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
     </div>
 </div>
 <!-- / modules/article.html -->
