--- a/templates/admin/modules/simple_article.html
+++ b/templates/admin/modules/simple_article.html
@@ -1,15 +1,14 @@
 
 <!-- modules/simple_article.html -->
 <div class="article">
-  <h1><a href="article/{{ article.article_link }}">{{ article.article_title }}</a></h1>
+  <h1><a href="admin/article/{{ article.article_id }}">{{ article.article_title }}</a></h1>
   <div class="body">{% raw article.article_annotation %}</div>
   <div class="body"> 
 
    <div class="admin">
-  {% if current_user %}
     [<a href="/compose?aid={{ article.article_id }}&rid={{ article.revision_id }}">{{ _("Edit this wiki") }}</a>]
-  {% end %}
-    [<a href="/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
+    [<a href="admin/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
     </div>
 </div>
+<br><br>
 <!-- / modules/simple_article.html -->
