--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="{{ static_url("wiki.css") }}" type="text/css">
     <link rel="alternate" href="/feed" type="application/atom+xml" title="{{ escape(handler.settings["wiki_title"]) }}">
     {% block head %}{% end %}
+     <meta property="og:image" content="//sinst.fwdcdn.com/img/newImg/sinLogo.png"/> 
+     <meta property="og:site_name" content="SINOPTIK.UA"/> 
+     <meta property="og:description" content="Прогноз погоди в Алушті"/> 
+     <meta property="fb:app_id" content="243438275713069" /> 
+     <link rel="apple-touch-icon" href="//sinst.fwdcdn.com/img/newImg/touch-icon-iphone.png"> 
+     <link rel="apple-touch-icon" sizes="76x76" href="//sinst.fwdcdn.com/img/newImg/touch-icon-ipad.png"> 
+     <link rel="apple-touch-icon" sizes="120x120" href="//sinst.fwdcdn.com/img/newImg/touch-icon-iphone-retina.png"> 
+     <link rel="apple-touch-icon" sizes="152x152" href="//sinst.fwdcdn.com/img/newImg/touch-icon-ipad-retina.png">
   </head>
   <body>
     <div id="body">
