--- a/templates/admin/articles.html
+++ b/templates/admin/articles.html
@@ -6,7 +6,7 @@
 
   {% for article in articles %}
 	<div class="article">
-  <h1><a href="admin/article/{{ article.article_id }}">{{ article.article_title }}</a></h1>
+  <h1><a href="/admin/article/{{ article.article_id }}">{{ article.article_title }}</a></h1>
   <div class="body">{% raw article.article_annotation %}</div>
   <div class="body"> 
 
@@ -15,7 +15,7 @@
     	[<a href="/admin/compose?aid={{ article.article_id }}&rid={{ article.revision_id }}">{{ _("Edit this wiki") }}</a>]
     {% end %}
     [<a href="/admin/compose?aid={{ article.article_id }}&rid={{ article.revision_id }}&ned=1">{{ _("Edit source wiki") }}</a>]
-    [<a href="admin/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
+    [<a href="/admin/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
     </div>
 </div>
 <br><br>
