--- a/templates/rest/ctegory_list.html
+++ b/templates/rest/ctegory_list.html
@@ -1,5 +1,5 @@
 
-<select name="category_article_id" id="category_article_id">
+<select name="{{itemName}}" id="{{itemName}}">
  {% for entry in dataList %}
 <option {% if entry.article_id == selected %} selected="selected" {% end %} value="{{entry.article_id}}">{{entry.article_title}}</option>
  {% end %}
