--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -13,15 +13,7 @@
     <div id="body">
       <div id="header">
         <div style="float:right">
-          {% if current_user %}
-          	||{{ current_user.user_name }}||
-            <a href="/admin/">{{ _("list Artikles") }}</a> -
-            <a href="/admin/compose">{{ _("New Article") }}</a> -
-            <a href="/admin/compose?ned=1">{{ _("New Source") }}</a> -
-            <a href="/auth/logout?next={{ url_escape(request.uri) }}">{{ _("Sign out") }}</a>
-          {% else %}
-            {% raw _('<a href="%(url)s">Sign in</a> to compose/edit') % {"url": "/auth/login?next=" + url_escape(request.uri)} %}
-          {% end %}
+        {%  include "../menu.html" %}
         </div>
         <h1><a href="/">{{ escape(handler.settings["wiki_title_admin"]) }}</a></h1>
       </div>
