--- a/templates/error.html
+++ b/templates/error.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="article">
-  <h1  class="eror">{{ error.code }}</h1>
+  <h1  class="eror">Ошибочка вышла № {{ error.code }}</h1>
   <div class="body">{% raw error.message %}</div>
 </div>
 {% end %}
