--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -27,11 +27,10 @@
                                 
                             </div>
 
-                            <div class="col-lg-12">
+                  	<div class="col-lg-12">
                             <div class="row">
-                    <div class="col-lg-6">
                         <div class="panel panel-yellow">
-                            <div class="panel-heading">Simple Table</div>
+                            <div class="panel-heading">Список моих статей</div>
                             <div class="panel-body">
                                 <table class="table table-hover">
                                     <thead>
@@ -72,7 +71,7 @@
                             </div>
                         </div>
                         <div class="panel panel-green">
-                            <div class="panel-heading">Bordered Table</div>
+                            <div class="panel-heading">Список Всех групп</div>
                             <div class="panel-body">
                                 <table class="table table-hover table-bordered">
                                     <thead>
@@ -113,7 +112,7 @@
                             </div>
                         </div>
                         <div class="panel panel-red">
-                            <div class="panel-heading">Contextual Row</div>
+                            <div class="panel-heading">Список Авторов</div>
                             <div class="panel-body">
                                 <table class="table table-hover table-bordered">
                                     <thead>
@@ -153,279 +152,10 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="panel panel-blue" style="background:#FFF;">
-                            <div class="panel-heading">Variations Table</div>
-                            <div class="panel-body">
-                                <table class="table table-hover table-bordered">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
-                                    <tfoot>
-                                    <tr>
-                                        <th></th>
-                                        <th><i>4 People</i></th>
-                                        <th></th>
-                                        <th><i>1 Approved</i></th>
-                                    </tr>
-                                    </tfoot>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="panel panel-violet">
-                            <div class="panel-heading">Striped Table</div>
-                            <div class="panel-body">
-                                <table class="table table-hover table-striped">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="panel panel-pink">
-                            <div class="panel-heading">Condensed Table</div>
-                            <div class="panel-body">
-                                <table class="table table-hover table-condensed">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="panel panel-grey">
-                            <div class="panel-heading">Contextual Column</div>
-                            <div class="panel-body">
-                                <table class="table table-hover table-bordered">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Column</th>
-                                        <th>Column</th>
-                                        <th>Column</th>
-                                        <th>Column</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td class="active">active</td>
-                                        <td class="success">success</td>
-                                        <td class="warning">warning</td>
-                                        <td class="danger">danger</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td class="active">active</td>
-                                        <td class="success">success</td>
-                                        <td class="warning">warning</td>
-                                        <td class="danger">danger</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td class="active">active</td>
-                                        <td class="success">success</td>
-                                        <td class="warning">warning</td>
-                                        <td class="danger">danger</td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td class="active">active</td>
-                                        <td class="success">success</td>
-                                        <td class="warning">warning</td>
-                                        <td class="danger">danger</td>
-                                    </tr>
-                                    <tr>
-                                        <td>5</td>
-                                        <td class="active">active</td>
-                                        <td class="success">success</td>
-                                        <td class="warning">warning</td>
-                                        <td class="danger">danger</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="panel panel-orange">
-                            <div class="panel-heading">Hover Table - Opion 1</div>
-                            <div class="panel-body">
-                                <table class="table table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="panel panel-green">
-                            <div class="panel-heading">Hover Table - Opion 2</div>
-                            <div class="panel-body">
-                                <table class="table table-hover-color">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                             
                             
-                            </div>
+                </div>
                             
                         </div>
                     </div>
