поменял "пользователя" на "автора"

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <nav id="topbar" role="navigation" style="margin-bottom: 0;" data-step="3" class="navbar navbar-default navbar-static-top">
             <div class="navbar-header">
                 <button type="button" data-toggle="collapse" data-target=".sidebar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                <a id="logo" href="index.html" class="navbar-brand"><span class="fa fa-rocket"></span><span class="logo-text">{{ escape(handler.settings["wiki_title"]) }}</span><span style="display: none" class="logo-text-icon">µ</span></a></div>
+                <a id="logo" href="/index.html" class="navbar-brand"><span class="fa fa-rocket"></span><span class="logo-text">{{ escape(handler.settings["wiki_title"]) }}</span><span style="display: none" class="logo-text-icon">µ</span></a></div>
             <div class="topbar-main"><a id="menu-toggle" href="#" class="hidden-xs"><i class="fa fa-bars"></i></a>
                 <form id="topbar-search" action="" method="" class="hidden-sm hidden-xs">
                     <div class="input-icon right text-white"><a href="#"><i class="fa fa-search"></i></a><input type="text" placeholder="Search here..." class="form-control text-white"/></div>
@@ -100,7 +100,7 @@
                 <!--END TITLE & BREADCRUMB PAGE-->
       {% block body %}{% end %}
     </div>
-    {% block bottom %}{% end %}
+    
                 <!--BEGIN FOOTER-->
                 <div id="footer">
                     <div class="copyright">
@@ -111,6 +111,8 @@
             <!--END PAGE WRAPPER-->
         </div>
     </div>
+    {% block bottom %}{% end %}
+    
     <script src="/static/script/jquery-1.10.2.min.js"></script>
     <script src="/static/script/jquery-migrate-1.2.1.min.js"></script>
     <script src="/static/script/jquery-ui.js"></script>
