--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,9 +2,11 @@
            <nav id="sidebar" role="navigation" data-step="2" data-intro="Template has &lt;b&gt;many navigation styles&lt;/b&gt;"
                 data-position="right" class="navbar-default navbar-static-side">
             <div class="sidebar-collapse menu-scroll">
-            <div  style="height: 250px; display:block; margin:15px auto 25px; ">
-            	<img src="/static/images/avatar/48.jpg" alt="" class="img-responsive img-circle"/>
+            <div  >
+            	<img src="/static/images/logo_161108.jpg" alt="" class="img-responsive"/>
             </div>
+            <div id='differen_menu'>
+            а, понял, похоже, эту менюшку надо вот так, "как есть" грузить аяксом...
                 <ul id="side-menu" class="nav">
                     
                      <div class="clearfix"></div>
@@ -31,6 +33,8 @@
                     </i><span class="menu-title">Мой рабочий стол</span></a>
                     </li>
                     
+                    
+                    
                     <li><a href="/perconal_desk_top"><i class="fa fa-th-list fa-fw">
                         <div class="icon-bg bg-blue"></div>
                     </i><span class="menu-title">Длинный список моих групп</span></a>
@@ -38,6 +42,7 @@
 
                           
                 </ul>
+                </div>
             </div>
         </nav>
 
