--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -31,42 +31,13 @@
                             <div class="row">
                         <div class="panel panel-yellow">
                             <div class="panel-heading">Список моих статей</div>
-                            <div class="panel-body">
+                            <div class="panel-body" id='articles_list_table'>
                                 <table class="table table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>Username</th>
-                                        <th>Age</th>
-                                        <th>Status</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Henry</td>
-                                        <td>23</td>
-                                        <td><span class="label label-sm label-success">Approved</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>John</td>
-                                        <td>45</td>
-                                        <td><span class="label label-sm label-info">Pending</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Larry</td>
-                                        <td>30</td>
-                                        <td><span class="label label-sm label-warning">Suspended</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lahm</td>
-                                        <td>15</td>
-                                        <td><span class="label label-sm label-danger">Blocked</span></td>
-                                    </tr>
-                                    </tbody>
+							         <thead>
+							         <tr>
+							             <th>загружаем данные списка статей.</th>
+							         </tr>
+							         </thead>
                                 </table>
                             </div>
                         </div>
@@ -161,6 +132,24 @@
                     </div>
                 </div>
                 <!--END CONTENT-->
+
+{% end %}
+
+
+{% block bottom %}
+
+<script type="text/javascript" src="{{ static_url("js/jquery-3.1.0.min.js") }}"></script>
+
+<script>
+     // Load data asynchronously.
+         
+	$(document).ready(function(){
+	      $.ajax({url: "/rest/getPersonalArticlesList/0", success: function(result){
+	          $("#articles_list_table").html(result);
+	      }});
+	});
+     
+</script>
 
 {% end %}
 
