странял мелкие недостатки

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
  {% if current_user %}
                     <li class="dropdown topbar-user">
                     <a data-hover="dropdown" href="#" class="dropdown-toggle">
-                    <img src="/static/images/avatar/48.jpg" alt="" class="img-responsive img-circle"/>&nbsp;<span class="hidden-xs" style="display: inline-block; width: 98px; white-space: nowrap; overflow: hidden;">{{current_user.user_name}}</span>&nbsp;<span class="caret"></span></a>
+                    <img src="/static/images/avatar/48.jpg" alt="" class="img-responsive img-circle"/>&nbsp;<span class="hidden-xs" style="display: inline-block; width: 98px; white-space: nowrap; overflow: hidden;">{{current_user.author_name}}</span>&nbsp;<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown-user pull-right">
                             <li><a href="/profile"><i class="fa fa-user"></i>My Profile</a></li>
                             <li><a href="/perconal_desk_top"><i class="fa fa-th-list fa-fw"></i>Мой рабочий стол</a></li>
