немного поправил шаблоны, основательно поправил схему данных, добрался до модели так еще немного, и можно будет тестировать

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -12,7 +12,7 @@
   <div class="body"> 
 
    <div class="admin">
-    [<a href="compose?aid={{ article.article_id }}&rid={{ article.revision_id }}">{{ _("Edit this wiki") }}</a>]
+    [<a href="compose?aid={{ article.article_id }}">{{ _("Edit this wiki") }}</a>]
     [<a href="revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
     </div>
 </div>
