--- a/templates/login.html
+++ b/templates/login.html
@@ -7,28 +7,54 @@
 <span style="color: red">Error: {{ error }}</span><p>
 {% end %}
 
-<form action="/auth/login" method="POST">
-	
-	<div class="form-group"><label class="col-sm-3 control-label">Username</label>
-	
-	    <div class="col-sm-9 controls">
-	        <div class="row">
-	            <div class="col-xs-9"><input name="login" placeholder="username (e-mail)" class="form-control" type="text"></div>
-	        </div>
-	    </div>
-	</div>
-	<div class="form-group"><label class="col-sm-3 control-label">Password</label>
-	
-	    <div class="col-sm-9 controls">
-	        <div class="row">
-	            <div class="col-xs-4"><input name="password" placeholder="password" class="form-control" type="password"></div>
-	        </div>
-	    </div>
-	</div>
-	
+
+<div class="panel panel-yellow">
+ <div class="panel-heading">
+     Login Form</div>
+ <div class="panel-body pan">
+     <form action="/auth/login" method="POST" class="form-horizontal">
+     <div class="form-body pal">
+         <div class="form-group">
+             <label for="inputName" class="col-md-3 control-label">
+                 login/e-mail</label>
+             <div class="col-md-9">
+                 <div class="input-icon right">
+                     <i class="fa fa-user"></i>
+                     <input id="login" name="login" placeholder="username (e-mail)" class="form-control" type="text"></div>
+             </div>
+         </div>
+         <div class="form-group">
+             <label for="inputPassword" class="col-md-3 control-label">
+                 Password</label>
+             <div class="col-md-9">
+                 <div class="input-icon right">
+                     <i class="fa fa-lock"></i>
+                     <input id="password" name="password" placeholder="password"  class="form-control" type="text"></div>
+                 <span class="help-block mbn"><a href="#"><small>Forgot password?</small> </a></span>
+             </div>
+         </div>
+         <div class="form-group mbn">
+             <div class="col-md-offset-3 col-md-6">
+                 <div class="checkbox">
+                     <label class="">
+                         <div class="icheckbox_minimal-grey" style="position: relative;"><input tabindex="5" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;" type="checkbox"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;"></ins></div>&nbsp; Keep me logged in</label></div>
+                </div>
+            </div>
+        </div>
+        <div class="form-actions pal">
+            <div class="form-group mbn">
+                <div class="col-md-offset-3 col-md-6">
+                    <a href="#" class="btn btn-primary">Register</a>&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-primary">
+                        Login</button>
+                </div>
+            </div>
+        </div>
   {% module xsrf_form_html() %}
-  <button class="btn btn-green btn-block" type="submit">login</button>
-</form>
+        </form>
+    </div>
+</div>
+	
 {% end %}
 
 
