--- a/templates/modules/article.html
+++ b/templates/modules/article.html
@@ -5,15 +5,15 @@
   <h1><a href="article/{{ article.article_id }}">{{ article.article_title }}</a></h1>
   <div class="body">{% raw article.article_annotation %}</div>
   тут показуха текста.. .как показывать хтмл- ки шаблонов????? 
-  <div class="body">{% raw article.article_html %}</div>
+  <div class="body">{% raw article.article_sourse %}</div>
   <div class="body"> 
 
   {% module FilesList( fileList) %}
   
 </div>    
     <div class="admin">
-    [<a href="/admin/compose?aid={{ article.article_id }}&rid={{article.revision_id}}">{{ _("Edit this wiki") }}</a>]
-    [<a href="/admin/compose?aid={{ article.article_id }}&rid={{article.revision_id}}&ned=1">{{ _("Edit source wiki") }}</a>]
+    [<a href="/admin/compose?aid={{ article.article_id }}">{{ _("Edit this wiki") }}</a>]
+    [<a href="/admin/compose?aid={{ article.article_id }}&ned=1">{{ _("Edit source wiki") }}</a>]
     
     [<a href="/admin/revisions?id={{ article.article_id }}">{{ _("View all revisions") }}</a>]
     </div>
