--- a/templates/login.html
+++ b/templates/login.html
@@ -30,23 +30,25 @@
                  <div class="input-icon right">
                      <i class="fa fa-lock"></i>
                      <input id="password" name="password" placeholder="password"  class="form-control" type="text"></div>
-                 <span class="help-block mbn"><a href="#"><small>Forgot password?</small> </a></span>
+                 <span class="help-block mbn"><a href="#"><small>{{_("Forgot password?")}} </small> </a></span>
              </div>
          </div>
          <div class="form-group mbn">
              <div class="col-md-offset-3 col-md-6">
                  <div class="checkbox">
                      <label class="">
-                         <div class="icheckbox_minimal-grey" style="position: relative;"><input tabindex="5" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;" type="checkbox"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;"></ins></div>&nbsp; Keep me logged in</label></div>
+                         <div class="icheckbox_minimal-grey" style="position: relative;">
+                         <input tabindex="5" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;" type="checkbox">
+                         <ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;"></ins></div>
+                         &nbsp; Keep me logged in</label></div>
                 </div>
             </div>
         </div>
         <div class="form-actions pal">
             <div class="form-group mbn">
                 <div class="col-md-offset-3 col-md-6">
-                    <a href="#" class="btn btn-primary">Register</a>&nbsp;&nbsp;
-                    <button type="submit" class="btn btn-primary">
-                        Login</button>
+                    <a href="/auth/create" class="btn btn-primary">{{_("Register")}}</a>&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-primary">{{_("Login")}}</button>
                 </div>
             </div>
         </div>
