--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-<form action="/auth/create" method="POST">
+<form action="/profile" method="POST"> 
+   {% module xsrf_form_html() %}
  
                   <!--BEGIN CONTENT-->
                 <div class="page-content">
