продолжаю привязывать дизайн (2)

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,13 +10,13 @@
 
 <div class="panel panel-yellow">
  <div class="panel-heading">
-     Login Form</div>
+     {{_("Login Form")}}</div>
  <div class="panel-body pan">
      <form action="/auth/login" method="POST" class="form-horizontal">
      <div class="form-body pal">
          <div class="form-group">
              <label for="inputName" class="col-md-3 control-label">
-                 login/e-mail</label>
+                 {{_("login/e-mai")}}l</label>
              <div class="col-md-9">
                  <div class="input-icon right">
                      <i class="fa fa-user"></i>
@@ -25,7 +25,7 @@
          </div>
          <div class="form-group">
              <label for="inputPassword" class="col-md-3 control-label">
-                 Password</label>
+                 {{_("Password")}}</label>
              <div class="col-md-9">
                  <div class="input-icon right">
                      <i class="fa fa-lock"></i>
@@ -40,7 +40,7 @@
                          <div class="icheckbox_minimal-grey" style="position: relative;">
                          <input tabindex="5" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;" type="checkbox">
                          <ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0% 0%; border: 0px none; opacity: 0;"></ins></div>
-                         &nbsp; Keep me logged in</label></div>
+                         &nbsp; {{_("Keep me logged in")}}</label></div>
                 </div>
             </div>
         </div>
