--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -1,70 +1,140 @@
 {% extends "base.html" %}
 
 {% block body %}
-<form action="/auth/create" method="POST">
-  Email: <input name="email" type="text"><br>
-  Name: <input name="name" type="text"><br>
-  Password: <input name="password" type="password"><br>
-  {% module xsrf_form_html() %}
-  <input type="submit">
-</form>
+  
+	<div class="col-md-9">
+	  <div id="generalTabContent" class="tab-content">
+	      <div id="tab-edit" class="tab-pane fade in active">
+	          <form action="/auth/create" method="POST" class="form-horizontal"><h3>{{_("Account Setting")}}</h3>
+	
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("Email")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                      <div class="row">
+	                          <div class="col-xs-9"><input name="author_email" type="email" placeholder="email@yourcompany.com" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("Login")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                          <div class="col-xs-9"> 
+	                      <div class="row"> <input name="author_login" type="text" placeholder="login" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("Password")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                      <div class="row">
+	                          <div class="col-xs-4"><input name="author_pass" type="password" placeholder="password" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("Confirm Password")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                      <div class="row">
+	                          <div class="col-xs-4"><input name="author_pass_conf" type="password" placeholder="password" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+	              <hr/>
+	              <h3>{{_("Profile Setting")}}</h3>
+	
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("First Name")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                      <div class="row">
+	                          <div class="col-xs-9"><input name="author_name" type="text" placeholder="first name" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+	              <div class="form-group"><label class="col-sm-3 control-label">{{_("Last Name")}}</label>
+	
+	                  <div class="col-sm-9 controls">
+	                      <div class="row">
+	                          <div class="col-xs-9"><input type="text"name="author_surname" placeholder="last name" class="form-control"/></div>
+	                      </div>
+	                  </div>
+	              </div>
+<!--
+                   <div class="form-group"><label class="col-sm-3 control-label">{{_("Gender")}}</label>
 
-                                                <form action="#">
-                                                <div class="form-body pal">
-                                                    <div class="form-group">
-                                                        <div class="input-icon right">
-                                                            <i class="fa fa-user"></i>
-                                                            <input id="inputName" type="text" placeholder="Username" class="form-control" /></div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <div class="input-icon right">
-                                                            <i class="fa fa-envelope"></i>
-                                                            <input id="inputEmail" type="text" placeholder="Email address" class="form-control" /></div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <div class="input-icon right">
-                                                            <i class="fa fa-lock"></i>
-                                                            <input id="inputPassword" type="password" placeholder="Password" class="form-control" /></div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <div class="input-icon right">
-                                                            <i class="fa fa-lock"></i>
-                                                            <input id="inputConfirmPassword" type="password" placeholder="Confirm Password" class="form-control" /></div>
-                                                    </div>
-                                                    <hr />
-                                                    <div class="row">
-                                                        <div class="col-md-6">
-                                                            <div class="form-group">
-                                                                <input id="inputFirstName" type="text" placeholder="First Name" class="form-control" /></div>
-                                                        </div>
-                                                        <div class="col-md-6">
-                                                            <div class="form-group">
-                                                                <input id="inputLastName" type="text" placeholder="Last Name" class="form-control" /></div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <select class="form-control">
-                                                            <option>Gender</option>
-                                                            <option value="0">Male</option>
-                                                            <option value="1">Female</option>
-                                                            <option value="2">Other</option>
-                                                        </select></div>
-                                                    <div class="form-group">
-                                                        <div class="checkbox">
-                                                            <label>
-                                                                <input tabindex="5" type="checkbox" />&nbsp; I want to receive news and special
-                                                                offers</label></div>
-                                                    </div>
-                                                    <div class="form-group mbn">
-                                                        <div class="checkbox">
-                                                            <label>
-                                                                <input tabindex="5" type="checkbox" />&nbsp; I agree with the Terms and Conditions</label></div>
-                                                    </div>
-                                                </div>
-                                                <div class="form-actions text-right pal">
-                                                    <button type="submit" class="btn btn-primary">
-                                                        Submit</button>
-                                                </div>
-                                                </form>
+                      <div class="col-sm-9 controls">
+                          <div class="row">
+                              <div class="col-xs-9">
+                                  <div class="radio"><label class="radio-inline"><input type="radio" value="0" name="author_gender" checked="checked"/>&nbsp;
+                                      {{_("Male")}}</label><label class="radio-inline"><input type="radio" value="1" name="author_gender"/>&nbsp;
+                                      {{_("Female")}}</label></div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="form-group"><label class="col-sm-3 control-label"{{_("Birthday")}}"></label>
+
+                      <div class="col-sm-9 controls">
+                          <div class="row">
+                              <div class="col-xs-4"><input id="datepicker-normal" name="author_birthday" type="text" class="form-control"/></div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="form-group"><label class="col-sm-3 control-label">{{_("Birthday")}}x</label>
+
+                      <div class="col-sm-9 controls">
+                          <div class="row">
+                              <div class="col-xs-9"><textarea rows="3" class="form-control"></textarea></div>
+                          </div>
+                      </div>
+                  </div>
+ -->
+                   <hr/>
+                    
+                    <h3>{{_("Contact Setting")}}</h3>
+
+                    <div class="form-group"><label class="col-sm-3 control-label">{{_("Mobile Phone")}}</label>
+
+                        <div class="col-sm-9 controls">
+                            <div class="row">
+                                <div class="col-xs-9"><input type="text" placeholder="mobile phone" class="form-control" name="author_phon"  /></div>
+                            </div>
+                        </div>
+                    </div>
+<!--
+                    <div class="form-group"><label class="col-sm-3 control-label"{{_("Website")}}"></label>
+
+                       <div class="col-sm-9 controls">
+                           <div class="row">
+                               <div class="col-xs-9"><input type="text" placeholder="website" class="form-control" name="author_name" /></div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="form-group"><label class="col-sm-3 control-label">{{_("Facebook")}}</label>
+
+                       <div class="col-sm-9 controls">
+                           <div class="row">
+                               <div class="col-xs-9"><input type="text" placeholder="facebook" class="form-control" name="author_name" /></div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="form-group"><label class="col-sm-3 control-label">{{_("Facebook")}}x</label>
+
+                       <div class="col-sm-9 controls">
+                           <div class="row">
+                               <div class="col-xs-9"><input type="text" placeholder="twitter" class="form-control" name="author_name" /></div>
+                           </div>
+                       </div>
+                   </div>
+ -->
+                   <hr/>
+                    <button type="submit" class="btn btn-green btn-block">{{_("Finish")}}</button>
+  {% module xsrf_form_html() %}
+                </form>
+            </div>
+        </div>
+    </div>
+  
+  
+  
 
 {% end %}
