--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -11,7 +11,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                      <div class="row">
-	                          <div class="col-xs-9"><input name="author_email" type="email" placeholder="email@yourcompany.com" class="form-control"/></div>
+	                          <div class="col-xs-9"><input name="email" type="email" placeholder="email@yourcompany.com" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -19,7 +19,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                          <div class="col-xs-9"> 
-	                      <div class="row"> <input name="author_login" type="text" placeholder="login" class="form-control"/></div>
+	                      <div class="row"> <input name="login" type="text" placeholder="login" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -27,7 +27,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                      <div class="row">
-	                          <div class="col-xs-4"><input name="author_pass" type="password" placeholder="password" class="form-control"/></div>
+	                          <div class="col-xs-4"><input name="pass" type="password" placeholder="password" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -35,7 +35,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                      <div class="row">
-	                          <div class="col-xs-4"><input name="author_pass_conf" type="password" placeholder="password" class="form-control"/></div>
+	                          <div class="col-xs-4"><input name="pass_conf" type="password" placeholder="password" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -46,7 +46,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                      <div class="row">
-	                          <div class="col-xs-9"><input name="author_name" type="text" placeholder="first name" class="form-control"/></div>
+	                          <div class="col-xs-9"><input name="name" type="text" placeholder="first name" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -54,7 +54,7 @@
 	
 	                  <div class="col-sm-9 controls">
 	                      <div class="row">
-	                          <div class="col-xs-9"><input type="text"name="author_surname" placeholder="last name" class="form-control"/></div>
+	                          <div class="col-xs-9"><input type="text"name="surname" placeholder="last name" class="form-control"/></div>
 	                      </div>
 	                  </div>
 	              </div>
@@ -64,8 +64,8 @@
                       <div class="col-sm-9 controls">
                           <div class="row">
                               <div class="col-xs-9">
-                                  <div class="radio"><label class="radio-inline"><input type="radio" value="0" name="author_gender" checked="checked"/>&nbsp;
-                                      {{_("Male")}}</label><label class="radio-inline"><input type="radio" value="1" name="author_gender"/>&nbsp;
+                                  <div class="radio"><label class="radio-inline"><input type="radio" value="0" name="gender" checked="checked"/>&nbsp;
+                                      {{_("Male")}}</label><label class="radio-inline"><input type="radio" value="1" name="gender"/>&nbsp;
                                       {{_("Female")}}</label></div>
                               </div>
                           </div>
@@ -75,7 +75,7 @@
 
                       <div class="col-sm-9 controls">
                           <div class="row">
-                              <div class="col-xs-4"><input id="datepicker-normal" name="author_birthday" type="text" class="form-control"/></div>
+                              <div class="col-xs-4"><input id="datepicker-normal" name="birthday" type="text" class="form-control"/></div>
                           </div>
                       </div>
                   </div>
@@ -96,7 +96,7 @@
 
                         <div class="col-sm-9 controls">
                             <div class="row">
-                                <div class="col-xs-9"><input type="text" placeholder="mobile phone" class="form-control" name="author_phon"  /></div>
+                                <div class="col-xs-9"><input type="text" placeholder="mobile phone" class="form-control" name="phon"  /></div>
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
 
                        <div class="col-sm-9 controls">
                            <div class="row">
-                               <div class="col-xs-9"><input type="text" placeholder="website" class="form-control" name="author_name" /></div>
+                               <div class="col-xs-9"><input type="text" placeholder="website" class="form-control" name="name" /></div>
                            </div>
                        </div>
                    </div>
@@ -113,7 +113,7 @@
 
                        <div class="col-sm-9 controls">
                            <div class="row">
-                               <div class="col-xs-9"><input type="text" placeholder="facebook" class="form-control" name="author_name" /></div>
+                               <div class="col-xs-9"><input type="text" placeholder="facebook" class="form-control" name="name" /></div>
                            </div>
                        </div>
                    </div>
@@ -121,7 +121,7 @@
 
                        <div class="col-sm-9 controls">
                            <div class="row">
-                               <div class="col-xs-9"><input type="text" placeholder="twitter" class="form-control" name="author_name" /></div>
+                               <div class="col-xs-9"><input type="text" placeholder="twitter" class="form-control" name="name" /></div>
                            </div>
                        </div>
                    </div>
