--- a/templates/menu.html
+++ b/templates/menu.html
@@ -27,7 +27,7 @@
 
  {% end %}
 
-                    <li {% if link == 'perconal_desk_top'  %} class="active"  {% end %}>
+                    <li {% if link == 'personal_desk_top'  %} class="active"  {% end %}>
                     	<a href="/perconal_desk_top"><i class="fa fa-th-list fa-fw">
                         <div class="icon-bg bg-blue"></div>
                     </i><span class="menu-title">Мой рабочий стол</span></a>
